# embassy-imxrt

./: Cargo.toml  ci.sh
.github/workflows/: cargo-vet.yml  check.yml
examples/rt633/: Cargo.toml  memory.x  rt633.yaml
examples/rt633/.cargo/: config.toml
examples/rt633/src/: lib.rs
examples/rt685s-evk/: Cargo.toml
examples/rt685s-evk-performance-tracing/: Cargo.toml
examples/rt685s-evk/.cargo/: config.toml
src/: clocks.rs  espi.rs  gpio.rs  iopctl.rs  lib.rs  pwm.rs  rng.rs  rtc.rs  spi.rs  timer.rs  uart.rs  wwdt.rs
src/dma/: channel.rs  mod.rs
src/flexspi/: embedded_storage.rs  mod.rs  nor.rs  nor_flash.rs  nor_storage_bus.rs  peripheral.rs
src/hashcrypt/: hasher.rs  mod.rs
src/i2c/: master.rs  mod.rs  slave.rs
src/time_driver/: ostimer.rs
supply-chain/: audits.toml  config.toml
